[package]
name = "ruststorage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rand = "0.8.5"
digest = "0.10.6"
sha2 = "0.10.6"
hex = "0.4.3"
ring = "0.16.20"
serde = "1.0.159"
aes = "0.8.2"
block-modes = "0.9.1"
rust-crypto = "0.2.36"
aes-ctr = "0.99.99"